trained on 1 and 3 splits data

--- a/xception_build_train2.ipynb
+++ b/xception_build_train2.ipynb
@@ -169,7 +169,8 @@
     "EPOCHS = 3\n",
     "\n",
     "# Define the early stopping callback\n",
-    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "# early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "early_stopping = EarlyStopping(monitor='accuracy', patience=3, restore_best_weights=True)\n",
     "\n",
     "# Train the model with early stopping\n",
     "history = model.fit(\n",
