solved issue of hyperparameter

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,6 @@
     "\n",
     "# Accuracies of the models\n",
     "acc1, acc2, acc3, acc4 = 0.66, 0.87, 0.82, 0.83\n",
-    "\n",
     "# Normalize the accuracies to get weights\n",
     "total_acc = acc1 + acc2 + acc3 + acc4\n",
     "wx1 = acc1 / total_acc\n",
@@ -132,7 +131,13 @@
     "wx3 = acc3 / total_acc\n",
     "wx4 = acc4 / total_acc\n",
     "\n",
+    "# n = 0.05 +0.6+0.15+0.15 # Experimental value\n",
+    "# n = 0.795\n",
+    "n = 0.97\n",
+    "\n",
+    "\n",
     "average_weights = [((w1*wx1) + (w2*wx2) + (w3*wx3) + (w4*wx4)) / n for w1, w2, w3, w4 in zip(weights1, weights2, weights3, weights4)]\n",
+    "\n",
     "merged_model.set_weights(average_weights)\n",
     "\n",
     "# Save the merged model\n",
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -161,14 +166,15 @@
     "test_generator = test_datagen.flow_from_directory(\n",
     "    r\"split_chest_xray\\test\",  # Replace with the path to your testing dataset directory\n",
     "    target_size=(224, 224),\n",
-    "    batch_size=32,\n",
+    "    # batch_size=32,\n",
+    "    batch_size=64,\n",
     "    class_mode='categorical'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -188,15 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 2s/step - accuracy: 0.8923 - loss: 0.3255\n",
-      "Test Loss: 0.3353727459907532, Test Accuracy: 0.8910256624221802\n"
+      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 3s/step - accuracy: 0.8784 - loss: 0.3817\n",
+      "Test Loss: 0.3796602189540863, Test Accuracy: 0.8894230723381042\n"
      ]
     }
    ],
